阶段测试,组卷模考,论述题自测样式修改 首页广告图逻辑优化 做题记录刷新模块优化

--- a/app/src/main/res/layout/activity_stage_of_testing.xml
+++ b/app/src/main/res/layout/activity_stage_of_testing.xml
@@ -26,9 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:overScrollMode="never"
-                android:paddingEnd="@dimen/dp_12"
-                android:paddingStart="@dimen/dp_12">
+                android:overScrollMode="never">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerview"
