--- a/app/src/main/res/layout/item_questionbankonrecord.xml
+++ b/app/src/main/res/layout/item_questionbankonrecord.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_69"
+    android:layout_height="@dimen/dp_68"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
-    android:minHeight="@dimen/dp_69">
+    android:paddingEnd="@dimen/dp_12"
+    android:paddingStart="@dimen/dp_12">
 
     <TextView
         android:id="@+id/item_questionrecord_title"
@@ -53,5 +54,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="继续做题" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_0_5"
+        android:background="@color/color_E6E6E6"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
