--- a/app/src/main/res/layout/fragment_coursedirectorylist.xml
+++ b/app/src/main/res/layout/fragment_coursedirectorylist.xml
@@ -4,7 +4,7 @@
     android:id="@+id/layout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_F5F5F5">
+    android:background="@android:color/white">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshlayout"
