--- a/app/src/main/res/layout/item_coursepackagelist.xml
+++ b/app/src/main/res/layout/item_coursepackagelist.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_57"
+    android:layout_height="@dimen/dp_58"
     android:layout_gravity="center_horizontal"
-    android:background="@android:color/white"
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
     android:paddingEnd="@dimen/dp_12"
     android:paddingStart="@dimen/dp_12"
     tools:ignore="RtlCompat">
@@ -52,6 +53,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_0_5"
+        android:background="@color/color_E6E6E6"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
