做题页修复部分情况写内存泄露问题 列表适配器优化

--- a/app/src/main/res/layout/item_useraddress_list.xml
+++ b/app/src/main/res/layout/item_useraddress_list.xml
@@ -99,6 +99,6 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_1"
+        android:layout_height="@dimen/dp_0_5"
         android:background="@color/color_E6E6E6" />
 </LinearLayout>
