--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -212,7 +212,8 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:paddingEnd="@dimen/dp_10"
-                    android:paddingStart="@dimen/dp_10">
+                    android:paddingStart="@dimen/dp_10"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="@dimen/dp_16"
