--- a/app/src/main/res/layout/item_coursedir_child.xml
+++ b/app/src/main/res/layout/item_coursedir_child.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_45"
@@ -7,20 +8,38 @@
     android:descendantFocusability="blocksDescendants"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingEnd="@dimen/dp_19"
+    android:paddingEnd="@dimen/dp_14"
     android:paddingStart="@dimen/dp_19"
     tools:ignore="RtlCompat">
 
-
     <TextView
         android:id="@+id/item_course_sectionname"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/color_666666"
-        android:textSize="@dimen/sp_12" />
+        android:textSize="@dimen/sp_12"
+        tools:text="案例-一杯星巴克咖啡的成本构成,一杯星巴克咖啡的成本构成" />
+
+    <com.flyco.roundview.RoundTextView
+        android:id="@+id/text_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/dp_6"
+        android:layout_marginStart="@dimen/dp_1"
+        android:gravity="center"
+        android:paddingBottom="@dimen/dp_1"
+        android:paddingEnd="@dimen/dp_4"
+        android:paddingStart="@dimen/dp_4"
+        android:paddingTop="@dimen/dp_1"
+        android:text="@string/completed"
+        android:textColor="@color/color_0267FF"
+        android:textSize="@dimen/sp_10"
+        android:visibility="gone"
+        app:rv_backgroundColor="@color/color_D8E8FF"
+        app:rv_isRadiusHalfHeight="true" />
 
     <TextView
         android:id="@+id/item_course_sectiontime"
@@ -29,6 +48,4 @@
         android:textColor="@color/color_999999"
         android:textSize="@dimen/sp_12"
         tools:text="00:00" />
-
-
 </LinearLayout>
