--- a/app/src/main/res/layout/titlebar_questionbank.xml
+++ b/app/src/main/res/layout/titlebar_questionbank.xml
@@ -32,10 +32,10 @@
                 android:ellipsize="middle"
                 android:gravity="center"
                 android:maxLines="1"
-                android:text="@string/question_default"
                 android:textColor="@color/color_333333"
                 android:textSize="@dimen/sp_16"
-                tools:ignore="EllipsizeMaxLines" />
+                tools:ignore="EllipsizeMaxLines"
+                tools:text="@string/question_default" />
 
             <ImageView
                 android:id="@+id/titlebar_midimage"
