--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -68,7 +68,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/dp_8"
-                        android:scaleType="center"
+                        android:minHeight="@dimen/dp_11"
+                        android:minWidth="@dimen/dp_12"
+                        android:scaleType="fitCenter"
                         android:src="@mipmap/icon_hotpoint"
                         tools:ignore="RtlCompat" />
                     <!--热点轮播-->
