--- a/app/src/main/res/layout/item_course_teacher.xml
+++ b/app/src/main/res/layout/item_course_teacher.xml
@@ -14,7 +14,7 @@
         android:id="@+id/image_teacher"
         android:layout_width="@dimen/dp_40"
         android:layout_height="@dimen/dp_40"
-        android:src="@mipmap/icon_headdefault"
+        android:src="@mipmap/icon_account_btn"
         app:civ_border_color="#FFFFFF"
         app:civ_border_width="1dp" />
 
