--- a/app/src/main/res/layout/titlebar_mine.xml
+++ b/app/src/main/res/layout/titlebar_mine.xml
@@ -25,9 +25,11 @@
         android:id="@+id/titlebar_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/dp_19"
+        android:layout_marginEnd="@dimen/dp_16"
         android:clickable="true"
-        android:padding="@dimen/dp_8"
+        android:minHeight="@dimen/dp_17"
+        android:minWidth="@dimen/dp_17"
+        android:padding="@dimen/dp_2"
         android:scaleType="fitCenter"
         android:src="@mipmap/icon_setting"
         app:layout_constraintBottom_toBottomOf="parent"
