--- a/app/src/main/res/drawable/toast_radius_and.xml
+++ b/app/src/main/res/drawable/toast_radius_and.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- 填充的颜色 #859AFB-->
-    <solid android:color="#000000" />
+    <solid android:color="@android:color/black" />
     <!-- android:radius 弧形的半径 -->
     <corners
         android:bottomLeftRadius="50dip"
