--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppBaseTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -59,7 +59,7 @@
     </style>
 
     <!--TODO 欢迎页样式-->
-    <style name="SplashTheme" parent="android:Theme.Holo.Light.NoActionBar.Fullscreen">
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@mipmap/splash_img</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowContentOverlay">@null</item>
