题库交互修改优化 视频画面比例调节 多图预览问题修复 文件添加null判断 修改部分图片在高分辨率机型下失真问题 App用户默认头像同意处理 修复部分无头像预览崩溃问题 修复首页热点轮播null问题 WebView适配黑夜模式 修复后续教育签到显示问题 添加重播功能

--- a/app/src/main/res/layout/activity_video_play_page.xml
+++ b/app/src/main/res/layout/activity_video_play_page.xml
@@ -56,26 +56,36 @@
             android:layout_centerInParent="true"
             android:visibility="gone" />
 
-        <!--loading小菊花-->
-        <com.ucfo.youcaiwx.widget.customview.LoadingView
-            android:id="@+id/player_loadingview"
-            android:layout_width="@dimen/dp_45"
-            android:layout_height="@dimen/dp_45"
-            android:layout_centerInParent="true"
-            android:visibility="gone" />
-
-        <!--提示信息-->
-        <TextView
-            android:id="@+id/player_tipstextview"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/player_loadingview"
             android:layout_centerInParent="true"
+            android:background="@color/transparent"
             android:gravity="center"
-            android:textColor="@color/colorWhite"
-            android:textSize="@dimen/sp_15"
-            android:visibility="gone"
-            tools:text="视频加载中" />
+            android:orientation="vertical">
+            <!--loading小菊花-->
+            <com.ucfo.youcaiwx.widget.customview.LoadingView
+                android:id="@+id/player_loadingview"
+                android:layout_width="@dimen/dp_45"
+                android:layout_height="@dimen/dp_45"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/player_replay"
+                android:layout_width="@dimen/dp_26"
+                android:layout_height="@dimen/dp_26"
+                android:src="@drawable/ic_play_replay"
+                android:visibility="gone" />
+            <!--提示信息-->
+            <TextView
+                android:id="@+id/player_tipstextview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/sp_15"
+                android:visibility="gone"
+                tools:text="视频加载中" />
+        </LinearLayout>
 
         <!--pdf的加载页数-->
         <com.flyco.roundview.RoundTextView
