--- a/app/src/main/res/drawable/ic_play_replay.xml
+++ b/app/src/main/res/drawable/ic_play_replay.xml
@@ -1,13 +1,6 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:autoMirrored="true"
-    android:viewportHeight="1024"
-    android:viewportWidth="1024">
-    <path
-        android:fillColor="#dbdbdb"
-        android:pathData="M718.38,112.26L555.51,4.8A27.98,27.98 0,0 0,511.85 28.31v216.04a27.98,27.98 0,0 0,43.66 23.51l162.87,-108.02a27.98,27.98 0,0 0,0 -47.57z" />
-    <path
-        android:fillColor="#dbdbdb"
-        android:pathData="M511.85,1024a475.74,475.74 0,0 1,0 -951.48,55.97 55.97,0 0,1 0,111.94 363.8,363.8 0,1 0,363.8 363.8,55.97 55.97,0 0,1 111.94,0 476.3,476.3 0,0 1,-475.74 475.74z" />
+<vector android:autoMirrored="true" android:height="24dp"
+    android:viewportHeight="1024" android:viewportWidth="1024"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#cdcdcd" android:pathData="M895.3,350.1c-21,-49.5 -50.9,-94 -89.1,-132.2s-82.7,-68.2 -132.2,-89.1C622.6,107 568.1,96 512,96c-53.2,0 -105.8,10.2 -154.8,29.8l-21.8,-54 -118.2,151.3 190.1,26.7 -26.1,-64.7C422.6,168.6 467,160 512,160c194.1,0 352,157.9 352,352S706.1,864 512,864 160,706.1 160,512H96c0,56.1 11,110.6 32.7,161.9 21,49.5 50.9,94 89.1,132.2s82.7,68.2 132.2,89.1C401.4,917 455.9,928 512,928s110.6,-11 161.9,-32.7c49.5,-21 94,-50.9 132.2,-89.1s68.2,-82.7 89.1,-132.2C917,622.6 928,568.1 928,512s-11,-110.6 -32.7,-161.9z"/>
+    <path android:fillColor="#cdcdcd" android:pathData="M447.6,400.7L640.4,512 447.6,623.3V400.7m-33.2,-86.4c-18.2,0 -30.8,14.5 -30.8,39.5v316.3c0,25 12.6,39.5 30.8,39.5 7.4,0 15.8,-2.4 24.6,-7.5L713,544c30.5,-17.6 30.5,-46.4 0,-64L439,321.8c-8.8,-5.1 -17.2,-7.5 -24.6,-7.5z"/>
 </vector>
