--- a/app/src/main/res/layout/activity_video_play_page.xml
+++ b/app/src/main/res/layout/activity_video_play_page.xml
@@ -57,6 +57,7 @@
             android:visibility="gone" />
 
         <LinearLayout
+            android:id="@+id/linear_replay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
