题库交互修改优化 视频画面比例调节 多图预览问题修复 文件添加null判断 修改部分图片在高分辨率机型下失真问题 App用户默认头像同意处理 修复部分无头像预览崩溃问题 修复首页热点轮播null问题 WebView适配黑夜模式 修复后续教育签到显示问题 添加重播功能 添加0.75倍速 修复了部分情况写可能出现的课程状态失效BUG 后续教育修改新需求 更换了logo 更换了启动图 推送优化

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,10 +14,11 @@
     <include layout="@layout/titlebar_toolbar" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dp_160"
+        android:layout_height="@dimen/dp_42"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/dp_46"
+        android:scaleType="fitXY"
         android:src="@mipmap/icon_login_logo" />
 
     <EditText
@@ -62,11 +63,11 @@
         android:drawableStart="@mipmap/icon_pass"
         android:gravity="center_vertical"
         android:hint="@string/login_tippass"
-        android:singleLine="true"
         android:inputType="textPassword"
         android:paddingBottom="@dimen/dp_6"
         android:paddingTop="@dimen/dp_6"
         android:password="true"
+        android:singleLine="true"
         android:textColor="@color/color_333333"
         android:textColorHint="@color/color_C2C2C2"
         android:textSize="@dimen/sp_15" />
