--- a/app/src/main/res/layout/activity_complete_and_forget.xml
+++ b/app/src/main/res/layout/activity_complete_and_forget.xml
@@ -16,10 +16,11 @@
 
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dp_160"
+        android:layout_height="@dimen/dp_42"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/dp_31"
+        android:scaleType="fitXY"
         android:src="@mipmap/icon_login_logo" />
 
     <EditText
