--- a/app/src/main/res/layout/activity_smslogin.xml
+++ b/app/src/main/res/layout/activity_smslogin.xml
@@ -14,10 +14,11 @@
     <include layout="@layout/titlebar_toolbar" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dp_160"
+        android:layout_height="@dimen/dp_42"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/dp_50"
+        android:scaleType="fitXY"
         android:src="@mipmap/icon_login_logo" />
 
     <EditText
